--- a/games.html
+++ b/games.html
@@ -149,7 +149,7 @@
                 </li>
                 <li>
                     <a href="./Simon Game Challenge Completed/index.html">
-                        <img src="/sources/simon.jpeg" alt="Simon Game Logo">
+                        <img src="./sources/simon.jpeg" alt="Simon Game Logo">
                         <p>Simon Game</p>
                     </a>
                 </li>
