--- a/games.html
+++ b/games.html
@@ -64,6 +64,10 @@
             text-decoration: none;
             font-size: 18px;
         }
+        
+        nav ul li a:hover {
+            color: #fa4604;
+        }
 
         .game-list {
             padding: 50px 0;
