--- a/contact.html
+++ b/contact.html
@@ -59,6 +59,11 @@
             text-decoration: none;
             font-size: 18px;
         }
+        
+        
+        nav ul li a:hover {
+            color: #fa4604;
+        }
 
         .contact-section {
             padding: 50px 0;
