--- a/about.html
+++ b/about.html
@@ -60,6 +60,10 @@
             font-size: 18px;
         }
 
+        nav ul li a:hover {
+            color: #fa4604;
+        }
+
         .about-section {
             padding: 50px 0;
             text-align: center;
