--- a/about.html
+++ b/about.html
@@ -107,6 +107,21 @@
                 Explore our range of games, challenge yourself, and immerse yourself in the world of gaming. Join us on this thrilling journey and let the fun begin!</p>
         </div>
     </section>
+     <script>
+        function checkLogin(gamePage) {
+            console.log("Checking login status...");
+            var username = localStorage.getItem('username');
+            console.log("Username:", username);
+            if (!username) {
+                alert('Please login to access games.');
+                console.log("Redirecting to login page...");
+                window.location.href = "login/index.html";
+            } else {
+                console.log("User is logged in, redirecting to game page:", gamePage);
+                window.location.href = gamePage;
+            }
+        }
+    </script>
     <footer>
         <div class="container">
             <p>&copy; 2024 Pro Gamer Zone. All rights reserved.</p>
