--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
             <div class="contact-info">
                 <p>Email: progamer@progamer.com</p>
                 <p>Phone: +91 7203603002</p>
-                <p>Address: 123 Gaming Street, MVBS Hostel Room No-233, India</p>
+                <p>Address: 123 Gaming Street, MVBS Hostel, Room No-233, India</p>
             </div>
             <div class="comment-box">
                 <h3>Leave a Comment</h3>
