--- a/contact.html
+++ b/contact.html
@@ -145,9 +145,9 @@
         <div class="container">
             <h2>Feel Free to Contact Us</h2>
             <div class="contact-info">
-                <p>Email: progamer@progamer.com</p>
+                <p>Email: pptjgrp4@gmail.com</p>
                 <p>Phone: +91 7203603002</p>
-                <p>Address: Gaming Street, Mumbai India</p>
+                <p>Address: Gaming Street, Mumbai - 400019, India</p>
             </div>
             <div class="comment-box">
                 <h3>Leave a Comment</h3>
