--- a/index.html
+++ b/index.html
@@ -336,6 +336,11 @@
             </ul>
         </div>
     </section>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Pro Gamer Zone. All rights reserved.</p>
+        </div>
+    </footer>
     <script>
         // Function to check login status and handle animations
         function checkLogin(gamePage) {
