--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <style>
-        /* Reset default browser styles */
+      
         * {
             margin: 0;
             padding: 0;
@@ -377,7 +377,7 @@
                 setTimeout(function() {
                     item.style.transform = 'translateY(0)';
                     item.style.opacity = '1';
-                }, index * 200); // Add delay to each item for a staggered effect
+                }, index * 200); 
             });
         });
     </script>
